# doctor-kivy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README2.md  bot.py  build.ps1  build.sh  docker-compose.yml  metrics.py  pyproject.toml  requirements.txt  setup_docker.sh  start_bot.py
config/: docker_config.py  settings.py
docker/: Dockerfile  Dockerfile.prewarmed  entrypoint.sh
docker/prewarmed/: Dockerfile.prewarmed
docker/scripts/: container_init.py  health_check.py
docs/: architecture.md  deployment.md  performance_plan.md
manim/: DiscordManimator.py  render_codeblock.py
src/: bot.py
src/core/: cache_manager.py  container_pool.py  renderer.py
src/models/: container_status.py  render_request.py
src/services/: code_processor.py  docker_service.py  kivy_validator.py
src/templates/: kivy_script_template.py  performance_wrapper.py
src/utils/: helpers.py  logging_config.py  security.py
src/views/: kivy_prompt_view.py
templates/: base.py  screenshot.py  video.py
tests/: test_container_pool.py  test_performance.py  test_renderer.py
