[project]
name = "doctor-kivy"
version = "0.1.0"
description = "I observe your code, inspect the widgets, and capture the diagnosis in a screenshot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiodocker>=0.24.0",
    "discord-py>=2.5.2",
    "docker>=7.1.0",
    "kivy-reloader>=0.7.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
