[project]
name = "doctor-kivy"
version = "0.1.0"
description = "I observe your code, inspect the widgets, and capture the diagnosis in a screenshot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiodocker>=0.24.0",
    "asynckivy>=0.9.0",
    "discord-py>=2.5.2",
    "docker>=7.1.0",
    "ffpyplayer>=4.5.3",
    "kivy-reloader>=0.7.1",
    "kivymd",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
kivymd = { url = "https://github.com/FilipeMarch/KivyMD/archive/master.zip" }
